--- a/custom.css
+++ b/custom.css
@@ -1,113 +1,72 @@
 div.texto-derecha {
-    text-align: right;
-    font-style: italic;
-    Color:navy;
+  text-align: right;
+  font-style: italic;
+  color: navy;
 }
 div.texto-izquierda {
-    text-align: left;
-    font-style: italic;
-    color:brown;
+  text-align: left;
+  font-style: italic;
+  color: brown;
 }
 
-div.general{
-    margin: 20% 20% 20% 20%;
-    max-width: 1000px;
-    min-width: 300px
+div.general {
+  margin: 10%;
+  max-width: 1000px;
+  min-width: 300px;
+  word-wrap: break-word;
 }
 
-h1{
-    text-decoration-color: blue;
-    text-align: left;
-    font-size: x-large;
+h1 {
+  text-decoration-color:navy;
+  text-align: left;
+  font-size: x-large;
 }
-h2{
-    text-decoration-color: red;
-    text-align: center;
-    text
+
+h2 {
+  text-decoration-color: red;
+  text-align: center;
+  text-decoration: underline;
+  word-spacing: 15px;
 }
 
 h3 {
-    font-size: small;
-    font-weight: normal;
-    text-align: right;
-    font-family:"Roboto-medium-italic";
+  font-size: x-large;
+  text-align: left;
+  font-weight: bolder;
+  text-decoration: underline overline;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-style:oblique;
+  writing-mode: vertical-rl; 
 }
+
 p {
-    text-align: justify;
-    font-family: sans-serif;
+  text-align: justify;
+  font-family: sans-serif;
+  line-height: 1.6;
+  hyphens: auto
 }
 
+p2 {
+  text-align: justify;
+  font-family: sans-serif;
+  line-height: 1.0;
+  word-wrap: break-word;
+}
 
-
-.roboto-thin {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
+pre {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: large;
+}
+#a {
+  quotes: "'" "'";
+}
+table {
+  border-collapse: collapse;
+  border-width: 4px;
+  border-style: dotted;
+  td{
+    background-color: lightblue;
+    border-style: dashed;
   }
-  
-  .roboto-light {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .roboto-medium {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .roboto-black {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-  
-  .roboto-thin-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-  }
-  
-  .roboto-light-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .roboto-regular-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .roboto-medium-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-  }
-  
-  .roboto-bold-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
-  
-  .roboto-black-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-  }
-  
+}
